--- a/app/views/motions/show.html.erb
+++ b/app/views/motions/show.html.erb
@@ -21,13 +21,10 @@
 <%=markdown @motion.description %>
 
 <p>
-  <b>User (original sponsor):</b> <%=h @motion.user %>
-</p>
-
-<p>
 <% if permitted_to? :edit, @motion -%>
 <%= link_to 'Edit', edit_motion_path(@motion) %> |
 <% end -%>
+<%= nested_index @motion, :users, %w( allowed ) %> |
 <%= nested_index @motion, :meetings, %w( past current future ) %> |
 <%= link_to "Back to #{@motion.committee}", committee_motions_path(@motion.committee) %>
 </p>
