--- a/app/views/motions/_form.html.erb
+++ b/app/views/motions/_form.html.erb
@@ -1,11 +1,9 @@
   <%= render "shared/error_messages", :target => form.object %>
-  <% form.inputs do %>
+  <%= form.inputs do %>
     <%= form.input :name, :hint => 'Name of the motion' %>
     <%= form.input :description, :hint => 'Briefly describe purpose and effect of motion' %>
-    <% if permitted_to? :manage, form.object %>
-      <%= form.input :user, 'Original sponsor of resolution' %>
-      <%= form.input :period, :collection => form.object.periods, :hint => 'For what period is the motion sponsored' %>
-    <% end %>
+    <%= form.input :period, :collection => form.object.committee.schedule.periods,
+      :hint => 'For what period is the motion sponsored' %>
   <% end %>
   <%= form.buttons %>
 
