--- a/app/views/motions/_motions.html.erb
+++ b/app/views/motions/_motions.html.erb
@@ -1,6 +1,5 @@
 <% committee ||= false %>
 <% period  ||= false %>
-<% position ||= false %>
 <table>
   <thead>
   <tr>
@@ -10,17 +9,13 @@
   <% unless period %>
     <th>Period</th>
   <% end %>
-  <% unless position %>
-    <th>Position</th>
-  <% end %>
-    <th>Position</th>
     <th>Name</th>
     <th>Status</th>
   </tr>
   </thead>
   <tbody>
 <%= render :partial => "motions/motion", :collection => motions,
-  :locals => { :committee => committee, :position => position } %>
+  :locals => { :committee => committee, :period => period } %>
   </tbody>
 </table>
 
