--- a/app/views/user_mailer/renew_notice.html.erb
+++ b/app/views/user_mailer/renew_notice.html.erb
@@ -8,7 +8,7 @@ You are receiving this notice because you have memberships either ending soon or
 
 <% if @user.memberships.renewal_unconfirmed.any? %>
 <p>
-You have not confirmed your preferences for the following memberships:
+According to our records you have the following unconfirmed renewal preferences.  You are:
 </p>
 
 <ul>
@@ -18,7 +18,7 @@ You have not confirmed your preferences for the following memberships:
 
 <% if @user.memberships.renewal_confirmed.any? %>
 <p>
-You have confirmed your preferences for the following memberships, although you may wish to adjust further:
+Our records also indicate you have confirmed you are:
 </p>
 
 <ul>
