--- a/app/views/memberships/renew.html.erb
+++ b/app/views/memberships/renew.html.erb
@@ -8,7 +8,7 @@
   </tr>
 </thead>
 <tbody>
-  <%= form.semantic_fields_for :memberships, @user.memberships.unrenewed do |subform| %>
+  <%= form.semantic_fields_for :memberships, @user.memberships.unrenewed.uniq do |subform| %>
     <%= table_row_tag do %>
       <td><%= subform.label :renew_until, subform.object.position.to_s %></td>
       <td><%= subform.object.ends_at.to_formatted_s :rfc822 %></td>
