Fix renew form.

--- a/app/views/memberships/renew.html.erb
+++ b/app/views/memberships/renew.html.erb
@@ -8,8 +8,8 @@
   </tr>
 </thead>
 <tbody>
-  <%= form.semantic_fields_for :memberships, @user.memberships.unrenewed.uniq do |subform| %>
-    <%= table_row_tag do %>
+  <%= table_row_tag do %>
+    <%= form.fields_for :memberships, @user.memberships.unrenewed.uniq do |subform| %>
       <td><%= subform.label :renew_until, subform.object.position.to_s %></td>
       <td><%= subform.object.ends_at.to_formatted_s :rfc822 %></td>
       <td><%= subform.text_field :renew_until, :value => subform.object.renew_until.try( :to_formatted_s, :rfc822 ), :class => 'ui-date-picker' %></td>
