Fix last commit.

--- a/app/views/memberships/renew.html.erb
+++ b/app/views/memberships/renew.html.erb
@@ -1,4 +1,4 @@
-<h2>Renewal preferences for <%= @user %>
+<h2>Renewal preferences for <%= @user %></h2>
 
 <p>
  Use this form to specify your membership renewal preferences for each of your
