--- a/app/views/user_mailer/_membership.text.erb
+++ b/app/views/user_mailer/_membership.text.erb
@@ -1,6 +1,6 @@
 <% if membership.renew_until? && membership.renew_until > Time.zone.today -%>
- * interested in renewing your membership in <%= membership.description %> that ends on <%= membership.ends_at.to_s :long_ordinal %> until <%= membership.renew_until.to_s :long_ordinal %>
+ * interested in renewing your membership in <%= membership.description %> <%= format_end_date membership %> until <%= membership.renew_until.to_s :long_ordinal %>
 <% else -%>
- * *not* interested in renewing your membership in <%= membership.description %> that ends on <%= membership.ends_at.to_s :long_ordinal %>
+ * *not* interested in renewing your membership in <%= membership.description %> <%= format_end_date membership %>
 <% end -%>
 
