Complete testing of mailer for close committee request.

--- a/app/views/request_mailer/_enrollment.text.erb
+++ b/app/views/request_mailer/_enrollment.text.erb
@@ -1,2 +1,2 @@
-* <%= enrollment.title %> in <%= enrollment.committee %> for a term beginning <%= membership.starts_at.to_s :us_ordinal %> and ending <%= membership.ends_at %>
+* <%= enrollment.title %> in <%= enrollment.committee %> for a term beginning <%= membership.starts_at.to_s :us_ordinal %> and ending <%= membership.ends_at.to_s :us_ordinal %>
 
