Improve closing notice slightly more.

--- a/app/views/request_mailer/close_notice.html.erb
+++ b/app/views/request_mailer/close_notice.html.erb
@@ -22,7 +22,7 @@ You have not been appointed to any positions as a result of this request.  This 
 <% end %>
 
 <p>
-If you have additional questions or concerns regarding this notice or your appointment, please contact <%= Staffing::Application.app_config['defaults']['authority']['contact_name'] %> &lt;<%= Staffing::Application.app_config['defaults']['authority']['contact_email'] %>&gt;.
+Your request is now considered closed.  No further appointments will be made in response to your request unless you explicitly reopen it by updating it online.  If you have additional questions or concerns regarding this notice or your appointment, please contact <%= Staffing::Application.app_config['defaults']['authority']['contact_name'] %> &lt;<%= Staffing::Application.app_config['defaults']['authority']['contact_email'] %>&gt;.
 </p>
 
 <p>
