--- a/app/views/request_mailer/close_notice.text.erb
+++ b/app/views/request_mailer/close_notice.text.erb
@@ -10,7 +10,8 @@ You have been appointed to the following <%=
 You have not been appointed to any positions as a result of this request.  This is most likely for reasons communicated to you or by you separately from this notice.
 <% end %>
 
-If you have additional questions or concerns regarding this notice or your appointment, please contact <%= Staffing::Application.app_config['defaults']['authority']['contact_name'] %> <<%= Staffing::Application.app_config['defaults']['authority']['contact_email'] %>>.
+
+Your request is now considered closed.  No further appointments will be made in response to your request unless you explicitly reopen it by updating it online.  If you have additional questions or concerns regarding this notice or your appointment, please contact <%= Staffing::Application.app_config['defaults']['authority']['contact_name'] %> <<%= Staffing::Application.app_config['defaults']['authority']['contact_email'] %>>.
 
 Best regards,
 
