Add designable flag so designees can be allowed only for certain positions.

--- a/app/views/positions/show.html.erb
+++ b/app/views/positions/show.html.erb
@@ -22,6 +22,8 @@
 
 <p><b>Renewable?</b> <%= @position.renewable? ? 'Yes' : 'No' %></p>
 
+<p><b>Designable?</b> <%= @position.designable? ? 'Yes' : 'No' %></p>
+
 <p>
   <b>Slots:</b> <%=h @position.slots %>
 </p>
