--- a/app/views/positions/_form.html.erb
+++ b/app/views/positions/_form.html.erb
@@ -13,6 +13,8 @@
     :hint => 'Should members receive renewal notices regarding this position?' %>
   <%= form.input :notifiable, :as => :radio, :label => 'Notifiable?',
     :hint => 'Should notices be sent when a membership is created/assigned and when it expires?' %>
+  <%= form.input :designable, :as => :radio, :label => 'Designable?',
+    :hint => 'Can designees be appointed for this position?' %>
   <%= form.input :statuses, :as => :check_boxes, :collection => User::STATUSES,
     :hint => 'What status must a user have to be in this position?  Leave blank if status is not a factor.' %>
   <%= form.input :join_message %>
