When editing a membership, show candidates for renewal and new appointment.

--- a/app/views/memberships/edit.html.erb
+++ b/app/views/memberships/edit.html.erb
@@ -1,8 +1,29 @@
 <h2>Editing membership for <%=h @membership.position %></h2>
 
+<div id="hub-description">
+
 <%= semantic_form_for(@membership) do |f| %>
   <%= render :partial => 'form', :object => f %>
 <% end %>
+
+</div>
+
+<div id="hub-sections">
+
+<div class="hub-section" id="hub-section-first">
+<h3>Renewal candidates</h3>
+
+<%= render :partial => 'candidates', :object => User.renewable_to( @membership ) %>
+</div>
+
+<div class="hub-section" id="hub-section-others">
+<h3>Other applicants</h3>
+
+<%= render :partial => 'candidates', :object => User.interested_in( @membership ) %>
+</div>
+
+</div>
+
 
 <p>
 <%= link_to 'Show', @membership %> |
