Show user netid and email on requests.

--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -31,6 +31,14 @@
 </p>
 
 <p>
+  <b>Netid:</b> <%=h @request.user.net_id %>
+</p>
+
+<p>
+  <b>Email:</b> <%=h @request.user.email %>
+</p>
+
+<p>
   <b>Desired Start Date:</b> <%=h @request.starts_at %>
 </p>
 
