Add active flag for positions to prevent creating unassigned memberships for inactive positions.

--- a/app/views/positions/show.html.erb
+++ b/app/views/positions/show.html.erb
@@ -24,6 +24,8 @@
 
 <p><b>Designable?</b> <%= @position.designable? ? 'Yes' : 'No' %></p>
 
+<p><b>Active?</b> <%= @position.active? ? 'Yes' : 'No' %></p>
+
 <p>
   <b>Slots:</b> <%=h @position.slots %>
 </p>
