--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -660,6 +660,7 @@ table, tr, th, td {
 	}
 
 table {
+    clear: both;
 	margin: 15px 0;
 	border-bottom: 1px solid #e7e7e7;
 	caption-side: bottom;
