--- a/app/views/enrollments/_form.html.erb
+++ b/app/views/enrollments/_form.html.erb
@@ -4,6 +4,8 @@
     :url => positions_path( :format => :json ) %>
   <%= form.input :title %>
   <%= form.input :votes %>
+  <%= form.input :membership_notices, :as => :radio,
+    :hint => 'Should enrolled user be copied on notices regarding membership changes?' %>
   <% end %>
   <%= form.buttons %>
 
