--- a/app/views/enrollments/show.html.erb
+++ b/app/views/enrollments/show.html.erb
@@ -15,6 +15,10 @@
 </p>
 
 <p>
+  <b>Membership notices?</b> <%= @enrollment.membership_notices? ? 'Yes' : 'No' %>
+</p>
+
+<p>
 <% if permitted_to? :edit, @enrollment -%>
 <%= link_to 'Edit', edit_enrollment_path(@enrollment) %> |
 <% end -%>
