--- a/app/views/request_mailer/_enrollment.html.erb
+++ b/app/views/request_mailer/_enrollment.html.erb
@@ -1,4 +1,2 @@
-<li>
-<%= enrollment.title %> in <%= enrollment.committee %> for a term beginning <%= membership.starts_at.to_s :us_ordinal %> and ending <%= membership.ends_at.to_s :us_ordinal %>
-</li>
+<li><%= enrollment.title %> in <%= enrollment.committee %> for a term beginning <%= membership.starts_at.to_s :us_ordinal %> and ending <%= membership.ends_at.to_s :us_ordinal %></li>
 
