Show what has been uploaded for a meeting.

--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -19,6 +19,18 @@
 </p>
 
 <p>
+  <b>Audio:</b> <%= @meeting.audio.file? ? link_to( 'Yes', @meeting.audio.url ) : 'No'  %>
+</p>
+
+<p>
+  <b>Editable minutes:</b> <%= @meeting.editable_minutes.file? ? link_to( 'Yes', @meeting.editable_minutes.url ) : 'No'  %>
+</p>
+
+<p>
+  <b>Published minutes:</b> <%= @meeting.published_minutes.file? ? link_to( 'Yes', @meeting.published_minutes.url ) : 'No'  %>
+</p>
+
+<p>
   <b>Motions:</b> <%= @meeting.motions.map(&:name).join(', ') %>
 </p>
 
