Searches should remain in context for committees and positions listings.  Users with authority associations should see all users information.

--- a/app/views/committees/index.html.erb
+++ b/app/views/committees/index.html.erb
@@ -1,6 +1,6 @@
 <h2><%= params[:action].titleize %> committees<%= @user ? " for #{h(@user)}" : "" %></h2>
 
-<%= form_for @search, :url => committees_path do |form| %>
+<%= form_for @search, :url => request.fullpath do |form| %>
 <p>
   <%= form.label :name_contains, 'Name' %>
   <%= form.text_field :name_contains %>
