Initial implementation of membership reporting.

--- a/app/views/committees/show.html.erb
+++ b/app/views/committees/show.html.erb
@@ -33,6 +33,7 @@
 <%= link_to 'List Positions', committee_positions_path(@committee) %> |
 <%= link_to 'List Requests', committee_requests_path(@committee) %> |
 <%= link_to 'Tent cards (pdf)', tents_committee_path( @committee, :format => :pdf ) %> |
+<%= link_to 'Members (pdf)', members_committee_path( @committee, :format => :pdf ) %> |
 <%= link_to 'Back', committees_path %>
 </p>
 
