--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -19,15 +19,15 @@
 </p>
 
 <p>
-  <b>Audio?</b> <%= @meeting.audio.file? ? link_to( 'Yes', "#{root_path}#{@meeting.audio.url}" ) : 'No'  %>
+  <b>Audio?</b> <%= @meeting.audio.blank? ? 'No' : link_to( 'Yes', "#{root_path}#{@meeting.audio.url}" )  %>
 </p>
 
 <p>
-  <b>Editable minutes?</b> <%= @meeting.editable_minutes.file? ? link_to( 'Yes', "#{root_path}#{@meeting.editable_minutes.url}" ) : 'No'  %>
+  <b>Editable minutes?</b> <%= @meeting.editable_minutes.blank? ? 'No' : link_to( 'Yes', "#{root_path}#{@meeting.editable_minutes.url}" )  %>
 </p>
 
 <p>
-  <b>Published minutes?</b> <%= @meeting.published_minutes.file? ? link_to( 'Yes', "#{root_path}#{@meeting.published_minutes.url}" ) : 'No'  %>
+  <b>Published minutes?</b> <%= @meeting.published_minutes.blank? ? 'No' : link_to( 'Yes', "#{root_path}#{@meeting.published_minutes.url}" )  %>
 </p>
 
 <p>
