Add/test facilities to associated a logo with a committee.

--- a/app/views/committees/_form.html.erb
+++ b/app/views/committees/_form.html.erb
@@ -2,6 +2,7 @@
   <%= form.inputs do %>
   <%= form.input :name %>
   <%= form.input :schedule, :hint => 'On what schedule are sessions of the committee organized?' %>
+  <%= form.input :logo %>
   <%= form.input :requestable, :as => :radio, :label => 'Requestable?' %>
   <%= form.input :join_message %>
   <%= form.input :leave_message %>
