Change logo model to brands and have logo be an attribute of the brand.

--- a/app/views/brands/_brands.html.erb
+++ b/app/views/brands/_brands.html.erb
@@ -5,7 +5,7 @@
   </tr>
 </thead>
 <tbody>
-<%= render :partial => "logos/logo", :collection => logos %>
+<%= render :partial => "brands/brand", :collection => brands %>
 </tbody>
 </table>
 
