--- a/app/views/committees/show.html.erb
+++ b/app/views/committees/show.html.erb
@@ -7,7 +7,7 @@
 </p>
 
 <p>
-  <b>Logo:</b> <%= @committee.logo ? link_to(@committee.logo) : 'No' %>
+  <b>Brand:</b> <%= @committee.brand ? link_to(@committee.brand) : 'No' %>
 </p>
 
 <p>
