--- a/app/views/brands/_form.html.erb
+++ b/app/views/brands/_form.html.erb
@@ -1,7 +1,7 @@
   <%= render "shared/error_messages", :target => form.object %>
   <%= form.inputs do %>
   <%= form.input :name %>
-  <%= form.input :vector, :as => :file %>
+  <%= form.input :logo, :as => :file %>
   <% end %>
   <%= form.buttons %>
 
