--- a/app/views/brands/show.html.erb
+++ b/app/views/brands/show.html.erb
@@ -2,6 +2,8 @@
   <b>Name:</b> <%=h @brand.name %>
 </p>
 
+<p><b>Logo:</b> <%=image_tag thumb_brand_path(@brand, :format => :png) %></p>
+
 
 <p>
 <% if permitted_to? :edit, @brand -%>
