--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,6 +46,7 @@
 <li><%= link_to 'logout', logout_path %></li>
 <% if current_user.admin? %>
 <li><%= link_to 'authorities', authorities_path %></li>
+<li><%= link_to 'brands', brands_path %></li>
 <li><%= link_to 'committees', committees_path %></li>
 <li><%= link_to 'positions', positions_path %></li>
 <li><%= link_to 'qualifications', qualifications_path %></li>
