Fix link to brands from committee show page.  Make user tent reports work with custom brands.

--- a/app/views/committees/show.html.erb
+++ b/app/views/committees/show.html.erb
@@ -7,7 +7,7 @@
 </p>
 
 <p>
-  <b>Brand:</b> <%= @committee.brand ? link_to(@committee.brand) : 'No' %>
+  <b>Brand:</b> <%= @committee.brand ? link_to(@committee.brand.name, brand_path( @committee.brand )) : 'No' %>
 </p>
 
 <p>
