--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -4,7 +4,7 @@
 <%= link_to 'Click here', edit_user_path( current_user ) %> to update your personal and contact information.  If you are not <%=h current_user.name %>, please close the web browser completely and log in using your own credentials.
 </p>
 
-<% if current_user.authorities.length > 0 -%>
+<% if current_user.authorities(0).length > 0 -%>
 <h3>Your Authorities</h3>
 
 <p>
@@ -12,7 +12,7 @@ You may review requests and update memberships for the following authorities:
 </p>
 
 <ul>
-<% current_user.authorities.each do |authority| %>
+<% current_user.authorities(0).each do |authority| %>
 <li>
 <%= link_to h( authority ), authority %>
 (<%= link_to 'active requests', active_authority_requests_path( authority ) %>)
