--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -40,6 +40,34 @@ You can specify your <%= link_to 'renewal preferences', renew_user_memberships_p
 <%= render :partial => 'memberships/memberships', :object => current_user.memberships.current, :locals => { :user => current_user } %>
 <% end %>
 
+<h4>Current Motions</h4>
+
+<% if current_user.motions.current.in_process.length > 0 %>
+<p>
+You have the following motions in process:
+</p>
+
+<%= render :partial => 'motions/motions', :object => current_user.motions.current.in_process %>
+<% else %>
+You have no motions in process.
+<% end %>
+
+<% if Committee.with_permissions_to(:vote).length > 0 %>
+<p>
+You may start motions for the following committees:
+</p>
+
+<ul id="voting_committees">
+<% Committee.with_permissions_to(:vote).uniq.each do |committee| %>
+<li><%=link_to committee.name, new_committee_motion_path( committee ) %></li>
+<% end %>
+</ul>
+<% else %>
+<p>
+You may not start motions for any committee at this time.
+</p>
+<% end %>
+
 <h3>Your Requests for Membership</h3>
 
 <p>
