Add ability to submit content of motion as part of motion itself.

--- a/app/views/motions/show.html.erb
+++ b/app/views/motions/show.html.erb
@@ -20,6 +20,12 @@
 
 <%=markdown @motion.description %>
 
+<p>
+  <b>Content:</b>
+</p>
+
+<%=markdown @motion.content %>
+
 <p><b>Sponsors:</b> <%= @motion.users.map(&:name).join(', ') %> </p>
 
 <p>
