--- a/app/views/motions/_form.html.erb
+++ b/app/views/motions/_form.html.erb
@@ -2,6 +2,7 @@
   <%= form.inputs do %>
     <%= form.input :name, :hint => 'Name of the motion' %>
     <%= form.input :description, :hint => 'Briefly describe purpose and effect of motion' %>
+    <%= form.input :content, :hint => 'Provide the text of the motion' %>
     <%= form.input :period, :collection => form.object.committee.schedule.periods,
       :hint => 'For what period is the motion sponsored' %>
     <%= form.semantic_fields_for :sponsorships do |subform| %>
