--- a/app/views/sponsorships/_form.html.erb
+++ b/app/views/sponsorships/_form.html.erb
@@ -1,3 +1,3 @@
-<%= form.autocompleted_input :user_name, :label => "User",
+<%= form.input :user_name, :as => :autocomplete, :label => "User",
 :url => form.object.motion.persisted? ? allowed_motion_users_path( form.object.motion, :format => :json ) : users_path( :format => :json ) %>
 
