--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -1,11 +1,11 @@
 <h2><%= params[:action].titleize %> meetings for <%= @committee ? @committee : "" %></h2>
 
-<%= will_paginate @meetings %>
+<%= paginate @meetings %>
 
 <%= render :partial => "meetings", :object => @meetings,
   :locals => { :committee => @committee ? @committee : false, :position => @user ? true : false } %>
 
-<%= will_paginate @meetings %>
+<%= paginate @meetings %>
 
 <hr />
 
