--- a/app/views/motions/index.html.erb
+++ b/app/views/motions/index.html.erb
@@ -1,11 +1,11 @@
 <h2><%=h params[:action].titleize %> motions for <%=h @committee ? @committee : "" %><%=h( @user ? @user : "" ) %></h2>
 
-<%= will_paginate @motions %>
+<%= paginate @motions %>
 
 <%= render :partial => "motions", :object => @motions,
   :locals => { :committee => @committee ? @committee : false, :position => @user ? true : false } %>
 
-<%= will_paginate @motions %>
+<%= paginate @motions %>
 
 <hr />
 
