--- a/app/views/positions/index.html.erb
+++ b/app/views/positions/index.html.erb
@@ -8,7 +8,7 @@
 </p>
 <% end %>
 
-<%= will_paginate @positions %>
+<%= paginate @positions %>
 
 <table>
   <thead>
@@ -29,7 +29,7 @@
 
 </table>
 
-<%= will_paginate @positions %>
+<%= paginate @positions %>
 
 <hr />
 
